--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "surfboard-calculator-revenge",
-  "homepage": "https://silvioBi.github.io",
+  "homepage": "https://silviobi.github.io/perfect-surfboard-calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
